# dnschecker

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yaml  test.yaml
src/: api.rs  dns.rs  main.rs  telegram.rs  vars.rs
