[package]
name = "dnschecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
trust-dns-resolver = "0.23.2"
base64 = "0.21.5"
chrono = "0.4.31"
log = "0.4.20"
simple_logger = "4.3.0"
tempfile = "3.8.1"
httpmock = "0.7.0"
mockito = "1.2.0"
url = "2.5.0"
http = "1.0.0"
shuteye = "0.3.3"
signal-hook = "0.3.17"

